exports[`Game Component should match the snapshot 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="even"
  listItem={false}
  onClick={[Function]}>
  <GameDetails
    game={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "id": 2,
        "p1": 1,
        "p1OnGoal": null,
        "p1PassAcc": null,
        "p1Poss": null,
        "p1Reds": 0,
        "p1Score": null,
        "p1Shots": null,
        "p1Yellows": 0,
        "p2": 3,
        "p2OnGoal": null,
        "p2PassAcc": null,
        "p2Poss": null,
        "p2Reds": 0,
        "p2Score": null,
        "p2Shots": null,
        "p2Yellows": 0,
        "status": "created",
        "tournament": 1,
        "updatedAt": null,
      }
    }
    player1={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "id": 1,
        "isTeam": 0,
        "updatedAt": null,
        "username": "Alice",
      }
    }
    player2={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "id": 3,
        "isTeam": 0,
        "updatedAt": null,
        "username": "Bob",
      }
    } />
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "modals": Array [],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}>
    <ModalHeader
      aria-label="Close"
      bsClass="modal-header"
      closeButton={false}>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4">
        Finish this Game!
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div">
      <Row
        bsClass="row"
        componentClass="div">
        <Col
          bsClass="col"
          componentClass="div"
          xs={3} />
        <Col
          bsClass="col"
          componentClass="div"
          xs={2}>
          <h4>
            Alice
          </h4>
        </Col>
        <Col
          bsClass="col"
          componentClass="div"
          xs={2}>
          <h4>
            Bob
          </h4>
        </Col>
        <Col
          bsClass="col"
          componentClass="div"
          xs={5} />
      </Row>
      <Row
        bsClass="row"
        componentClass="div">
        <Col
          bsClass="col"
          componentClass="div"
          xs={12}>
          <ReduxForm
            initialValues={
              Object {
                "createdAt": "2016-12-25T19:31:48",
                "id": 2,
                "p1": 1,
                "p1OnGoal": null,
                "p1PassAcc": null,
                "p1Poss": null,
                "p1Reds": 0,
                "p1Score": null,
                "p1Shots": null,
                "p1Yellows": 0,
                "p2": 3,
                "p2OnGoal": null,
                "p2PassAcc": null,
                "p2Poss": null,
                "p2Reds": 0,
                "p2Score": null,
                "p2Shots": null,
                "p2Yellows": 0,
                "status": "created",
                "tournament": 1,
                "updatedAt": null,
              }
            }
            onSubmit={[Function]} />
        </Col>
      </Row>
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div">
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}>
        Cancel
      </Button>
    </ModalFooter>
  </Modal>
</ListGroupItem>
`;

exports[`Game Component should open the game modal when clicked 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="even"
  listItem={false}
  onClick={[Function]}>
  <GameDetails
    game={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "id": 2,
        "p1": 1,
        "p1OnGoal": null,
        "p1PassAcc": null,
        "p1Poss": null,
        "p1Reds": 0,
        "p1Score": null,
        "p1Shots": null,
        "p1Yellows": 0,
        "p2": 3,
        "p2OnGoal": null,
        "p2PassAcc": null,
        "p2Poss": null,
        "p2Reds": 0,
        "p2Score": null,
        "p2Shots": null,
        "p2Yellows": 0,
        "status": "created",
        "tournament": 1,
        "updatedAt": null,
      }
    }
    player1={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "id": 1,
        "isTeam": 0,
        "updatedAt": null,
        "username": "Alice",
      }
    }
    player2={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "id": 3,
        "isTeam": 0,
        "updatedAt": null,
        "username": "Bob",
      }
    } />
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "modals": Array [],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}>
    <ModalHeader
      aria-label="Close"
      bsClass="modal-header"
      closeButton={false}>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4">
        Finish this Game!
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div">
      <Row
        bsClass="row"
        componentClass="div">
        <Col
          bsClass="col"
          componentClass="div"
          xs={3} />
        <Col
          bsClass="col"
          componentClass="div"
          xs={2}>
          <h4>
            Alice
          </h4>
        </Col>
        <Col
          bsClass="col"
          componentClass="div"
          xs={2}>
          <h4>
            Bob
          </h4>
        </Col>
        <Col
          bsClass="col"
          componentClass="div"
          xs={5} />
      </Row>
      <Row
        bsClass="row"
        componentClass="div">
        <Col
          bsClass="col"
          componentClass="div"
          xs={12}>
          <ReduxForm
            initialValues={
              Object {
                "createdAt": "2016-12-25T19:31:48",
                "id": 2,
                "p1": 1,
                "p1OnGoal": null,
                "p1PassAcc": null,
                "p1Poss": null,
                "p1Reds": 0,
                "p1Score": null,
                "p1Shots": null,
                "p1Yellows": 0,
                "p2": 3,
                "p2OnGoal": null,
                "p2PassAcc": null,
                "p2Poss": null,
                "p2Reds": 0,
                "p2Score": null,
                "p2Shots": null,
                "p2Yellows": 0,
                "status": "created",
                "tournament": 1,
                "updatedAt": null,
              }
            }
            onSubmit={[Function]} />
        </Col>
      </Row>
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div">
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}>
        Cancel
      </Button>
    </ModalFooter>
  </Modal>
</ListGroupItem>
`;

exports[`Game Component should open the game modal when clicked 2`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="even"
  listItem={false}
  onClick={[Function]}>
  <GameDetails
    game={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "id": 2,
        "p1": 1,
        "p1OnGoal": null,
        "p1PassAcc": null,
        "p1Poss": null,
        "p1Reds": 0,
        "p1Score": null,
        "p1Shots": null,
        "p1Yellows": 0,
        "p2": 3,
        "p2OnGoal": null,
        "p2PassAcc": null,
        "p2Poss": null,
        "p2Reds": 0,
        "p2Score": null,
        "p2Shots": null,
        "p2Yellows": 0,
        "status": "created",
        "tournament": 1,
        "updatedAt": null,
      }
    }
    player1={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "id": 1,
        "isTeam": 0,
        "updatedAt": null,
        "username": "Alice",
      }
    }
    player2={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "id": 3,
        "isTeam": 0,
        "updatedAt": null,
        "username": "Bob",
      }
    } />
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "modals": Array [],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={true}>
    <ModalHeader
      aria-label="Close"
      bsClass="modal-header"
      closeButton={false}>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4">
        Finish this Game!
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div">
      <Row
        bsClass="row"
        componentClass="div">
        <Col
          bsClass="col"
          componentClass="div"
          xs={3} />
        <Col
          bsClass="col"
          componentClass="div"
          xs={2}>
          <h4>
            Alice
          </h4>
        </Col>
        <Col
          bsClass="col"
          componentClass="div"
          xs={2}>
          <h4>
            Bob
          </h4>
        </Col>
        <Col
          bsClass="col"
          componentClass="div"
          xs={5} />
      </Row>
      <Row
        bsClass="row"
        componentClass="div">
        <Col
          bsClass="col"
          componentClass="div"
          xs={12}>
          <ReduxForm
            initialValues={
              Object {
                "createdAt": "2016-12-25T19:31:48",
                "id": 2,
                "p1": 1,
                "p1OnGoal": null,
                "p1PassAcc": null,
                "p1Poss": null,
                "p1Reds": 0,
                "p1Score": null,
                "p1Shots": null,
                "p1Yellows": 0,
                "p2": 3,
                "p2OnGoal": null,
                "p2PassAcc": null,
                "p2Poss": null,
                "p2Reds": 0,
                "p2Score": null,
                "p2Shots": null,
                "p2Yellows": 0,
                "status": "created",
                "tournament": 1,
                "updatedAt": null,
              }
            }
            onSubmit={[Function]} />
        </Col>
      </Row>
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div">
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}>
        Cancel
      </Button>
    </ModalFooter>
  </Modal>
</ListGroupItem>
`;
